posts/knative_traffic_splitting/config_revision/route_1.yaml
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  name: istioinit-gke
  namespace: default
spec:
  traffic:
  - revisionName: istioinit-gke-0001
    percent: 100
